--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ Front End - Parte2/1 Flexbox/
 Front End - Parte2/2 Gridd/
 Front End - Parte2/3 Responsive/
 Front End - Parte2/4 Arquitectura CSS/
-Front End - Parte2\6 DOM JS\Manipulando el DOM/script1.js/
+Front End - Parte2/6 DOM JS\Manipulando el DOM/script1.js/
+Front End - Parte2/7 JS Formularios/
